# lux

./: LICENSE  README.md  flake.nix  lux.cabal
lib-lang/: Utils.hs
lib-lang/Lux/: Input.hs  Matches.hs  UnSpan.hs
lib-lang/Lux/Common/: Parsers.hs  Types.hs
lib-lang/Lux/Input/: Interpret.hs  Interpreter.hs  Match.hs  Parsers.hs  Types.hs
lib-lang/Lux/Output/: Interpret.hs  Interpreter.hs  Parsers.hs  Types.hs
lib-lang/Text/Megaparsec/: Braced.hs  Diagnostic.hs  NonEmpty.hs  SepBy.hs  Spanned.hs
lux/: Main.hs
test/: Main.hs  TestParser.hs  TestTemplate.hs
test/Test/Lang/: Input.hs  Output.hs
test/Test/Lux/: Output.hs
test/Test/Lux/Input/: Interpreter.hs  Parsers.hs
