cabal-version:      3.0
name:               lux
version:            0.0.1.0
license:            BSD-3-Clause
license-file:       LICENSE

common c
  default-language:    GHC2021
  default-extensions:
    NoFieldSelectors
    OverloadedRecordDot
    DuplicateRecordFields
    StrictData

    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wincomplete-record-updates
    -Wmissing-deriving-strategies
    -O2

library
  import:          c
  hs-source-dirs:  lib-lang
  exposed-modules:
    Lux.Common.Parsers
    Lux.Common.Types
    Lux.Input
    Lux.Input.Interpret
    Lux.Input.Match
    Lux.Input.Parsers
    Lux.Input.Types
    Lux.Output.Parsers
    Lux.Output.Types
    Lux.Matches
    Lux.UnSpan
    Text.Megaparsec.Diagnostic
    Text.Megaparsec.NonEmpty
    Text.Megaparsec.SepBy
    Text.Megaparsec.Spanned
    Utils

  build-depends:
    , base
    , containers
    , comonad
    , megaparsec
    , mtl
    , pretty
    , text

test-suite test
  import:         c
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:  TestParser
                , Test.Input
                , Test.Output
                , TestTemplate
  build-depends:  lux
                , text
                , quickcheck-text
                , megaparsec
                , tasty
                , tasty-hunit
                , tasty-quickcheck
